--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@ GENERAL
 body {
   background: #fff;
   font-family: 'Lato', sans-serif;
+  font-size: 20px;
 }
 
 .section-color, .section-white {
@@ -47,11 +48,11 @@ body {
 }
 
 .wrapper {
-  max-width: 80%;
+  max-width: 65%;
   margin: 0 auto;
 }
 
-h1,h2 {
+h1,h2,h3 {
   font-family: 'Montserrat', sans-serif;
   font-weight: 800;
   text-transform: uppercase;
@@ -63,6 +64,13 @@ h1 {
 
 h2 {
   font-size: 48px;
+}
+
+a { color: #1abc9c; }
+
+a:hover {
+    color: #117964;
+    text-decoration: underline;
 }
 
 /*==================================================
@@ -133,6 +141,7 @@ ul.main-menu li a:hover {
   padding: 12.8px;
   border-radius: 10px;
   font-weight: 800;
+  color: #fff;
 }
 
 /* --------------------------------------------------
@@ -200,6 +209,62 @@ MAIN
   color: #fff;
 }
 
+.btn-white-outline {
+  padding:  16px 28px;
+  color: #fff;
+  border: 2px solid #fff;
+  border-radius: 10px;
+  font-weight: 800;
+  margin-top: 24px;
+  font-size: 20px;
+}
+
+.btn-white-outline:hover {
+  background: #fff;
+  color: #333;
+}
+
+.btn-white-outline .fas {
+  margin-right: 8px;
+}
+
+/* Contact */
+
+.lf_input {
+  border-radius: 0;
+  padding: 48px 0;
+  border: none;
+  border-bottom: 1px solid #e9ecef;
+  box-shadow: none;
+  font-size: 20px;
+  font-weight: 400;
+  width: 100%;
+}
+
+.lf_input:focus {
+  border: none;
+  outline: none;
+  box-shadow: none;
+  border-bottom: 1px solid #e9ecef;
+}
+
+.lf_input::placeholder {
+  color: #6c757d;
+  font-size: 20px;
+  font-weight: 400;
+}
+
+.contact .btn_green {
+  padding: 16px 28px;
+  font-size: 20px;
+}
+
+.contact .btn_green:hover {
+  background-color: #159a80;
+  border-color: #148f77;
+  color: #fff;
+}
+
 /*==================================================
 --------------------------------------------------
 FOOTER
@@ -212,6 +277,11 @@ FOOTER
   padding: 80px 0;
 }
 
+.footer h3 {
+  font-size: 24px;
+  margin-bottom: 24px;
+}
+
 .footer-bottom {
   background: #1a252f;
   color: #fff;
@@ -219,5 +289,30 @@ FOOTER
 }
 
 .footer-bottom p {
+  font-size: 12px;
   margin: 0;
+}
+
+.footer ul.social_icon {
+  margin: 0 auto;
+  padding: 0;
+}
+
+.footer ul.social_icon li {
+  width: 52px;
+  height: 52px;
+  border: 2px solid #fff;
+  border-radius: 50%;
+  list-style: none;
+  display: inline-block;
+  margin-left: 8px;
+}
+
+.footer ul.social_icon li:first-child {
+  margin-left: 0;
+}
+
+.footer ul.social_icon li a {
+  color: #fff;
+  line-height: 48px;
 }
